fix: Align dos and donts better with intended visual design

--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -103,3 +103,6 @@
   --utrecht-button-subtle-focus-color: var(--nlds-focus-color);
   --utrecht-button-subtle-focus-font-weight: normal;
 }
+.nlds-canvas__button.utrecht-button:focus {
+  background-color: var(--utrecht-button-focus-background-color) !important;
+}
